--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Codeup Design</title>
 </head>
 <body>
-
+    <h1>Helloooooo world</h1>
 </body>
 </html>
