completed lnking the css, hotpink for bg

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Codeup Design</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Helloooooo world</h1>
